clusters/home/ingress-test copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  grafana
                port:
                  number: 3000
