clusters/home/product-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /httpbin
            pathType: Prefix
            backend:
              service:
                name:  httpbin
                port:
                  number: 8000
