clusters/home/wecan.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: my-wekan
    meta.helm.sh/release-namespace: default
  labels:
    app: wekan
    app.kubernetes.io/managed-by: Helm
    chart: wekan-7.61.0
    component: wekan
    heritage: Helm
    release: my-wekan
  name: my-wekan
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: 
    http:
      paths:
      - backend:
          service:
            name: wekan
            port:
              number: 8080
        path: /wecan2
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - ip: 172.19.241.30
